Update contents for day 3

--- a/pages/day3.html
+++ b/pages/day3.html
@@ -4,88 +4,149 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles.css">
-    <title>Japan Day 1</title>
+    <title>Japan Day 3</title>
 </head>
 <body>
     <div class="header">
         <div class="header-top">
-            <div class="logo">Day 1, 20240823</div>
+            <div class="logo">Day 3 - 20240825</div>
             <ul class="header-links">
                 <li><a href="../index.html" target="_blank">home</a></li>
             </ul>
         </div>
     </div>
-    <img class="header-img" src="../images/DSC_0797.JPEG">
+    <img class="header-img-day-3" src="../images/IMG_0961.JPG">
     <div class="content-title">
-        <div class="content1-main">Lost in Japan</div>
-        <div class="content1-sub">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
+        <div class="content1-main">Anatomy Of A Perfect Date</div>
+        <div class="content1-sub">What makes a perfect date? What elements are necessary to make it perfect?</div>
     </div>
-    <div class="info">
-        <div class="info-top">
-            Places we visited.
+    <div class="border"></div>
+    <div class="day1-top">
+        <!-- <div class="image-placeholder"> -->
+        <div class="sensoji-pic">
+                <img src="../images/IMG_0957.JPG">
+                <img src="../images/IMG_0961.JPG">
         </div>
-        <div class="info-bottom">
-            <div class="image-block">
-                <img src="../images/DSC_0797.JPEG">
-                <div class="pic-subtext">The sun was scorching, but still not as hot as you.</div>
-            </div>
-            <div class="image-block">
-                <img src="../images/DSC_0919.JPEG">
-                <div class="pic-subtext">The lights were bright, but you shone the brightest!</div>
-            </div>
-            <div class="image-block">
-                <img src="../images/IMG_0839.JPG">
-                <div class="pic-subtext">Classic and sophisticated. But I'm not talking about Ginza.</div>
-            </div>
-            <div class="image-block">
-                <img src="../images/IMG_0999.JPEG">
-                <div class="pic-subtext">Are you a sunflower? Because you brighten my day and always turn me in your direction.</div>
-            </div>
+        <div class="day2-text">
+            <div class="content1-main">Culture</div>
+            <div class="content1-sub">Include a cultural element in your date to show that you're intellectual and cultured — someone who values local traditions and admires unique architecture.</div>
         </div>
     </div>
-    <div class="content-1">
-        <div class="image-placeholder">
-            <img src="../images/IMG_0961.JPG">
+    <div class="food">
+        <div class="food-top">
+            Local Delicacies
         </div>
-        <div class="content-text">
-            <div class="content1-main">Lost in Japan</div>
-            <div class="content1-sub">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
+        <div class="food-middle">
+            Show her that you have great taste by treating her to the best melon pan in the world, a grilled unagi onigiri for something a bit unconventional, and takoyaki for a classic favorite. Finish with fresh peaches and Shine Muscat grapes for a healthy and delightful dessert. Share each dish to create a more intimate and memorable experience.
         </div>
-    </div>
-    <div class="content-2">
-        <div class="content-text">
-            <div class="content2-main">Lost in Japan</div>
-            <div class="content2-sub">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
-        </div>
-        <div class="image-placeholder">
-            <img src="../images/IMG_0961.JPG">
-        </div>
-    </div>
-    <div class="content-1">
-        <div class="content-text">
-            <div class="content1-main">Lost in Japan</div>
-            <div class="content1-sub">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
-        </div>
-        <div class="image-placeholder">
-            <img src="../images/IMG_0961.JPG">
+        <div class="food-bottom">
+            <div class="image-block">
+                <img src="../images/IMG_9197.JPEG">
+                <div class="pic-subtext"></div>
+            </div>
+            <div class="image-block">
+                <img src="../images/IMG_1024.JPG">
+                <div class="pic-subtext"></div>
+            </div>
+            <div class="image-block">
+                <img src="../images/IMG_9247.JPEG">
+                <div class="pic-subtext"></div>
+            </div>
+            <div class="image-block">
+                <img src="../images/IMG_9418.JPEG">
+                <div class="pic-subtext"></div>
+            </div>
         </div>
     </div>
     <div class="quotation">
         <div class="quotes">
-            You said that money can't buy happiness? He he he he. Sumimasen, come to Japan! I wonder if you know how they live in Tokyo. If you seen it then you mean it. Then you know you have to go, fast and furious!
+            If I had to eat only in one city for the rest of my life, Tokyo would be it.
         </div>
         <div class="speaker">
-            -Guy on TikTok
+            -Anthony Bourdain
+        </div>
+    </div>
+    <div class="food">
+        <div class="food-top">
+            Eat MORE Foods
+        </div>
+        <div class="food-middle">
+            We really ate a lot.
+        </div>
+        <div class="food-bottom">
+            <div class="image-block">
+                <img src="../images/IMG_9049.JPEG">
+                <div class="pic-subtext">From fried stuffs</div>
+            </div>
+            <div class="image-block">
+                <img src="../images/IMG_0871.JPG">
+                <div class="pic-subtext">to raw seafoods</div>
+            </div>
+            <div class="image-block">
+                <img src="../images/IMG_0896.JPG">
+                <div class="pic-subtext">to cool jelly</div>
+            </div>
+            <div class="image-block">
+                <img src="../images/IMG_0909.JPG">
+                <div class="pic-subtext">to hot curry, which was too hot.</div>
+            </div>
         </div>
     </div>
     <div class="content-1">
         <div class="content-text">
-            <div class="content1-main">Lost in Japan</div>
-            <div class="content1-sub">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
+            <div class="content1-main">Take Selfies</div>
+            <div class="content1-sub">Preferably in a mirror or a mirrory surface.</div>
         </div>
-        <div class="image-placeholder">
-            <img src="../images/IMG_0961.JPG">
+        <div class="kamakura-spots">
+            <img src="../images/IMG_0824.JPG">
+            <img src="../images/IMG_9023.JPEG">
+            <img src="../images/DSC_0926.JPEG">
+            <img src="../images/IMG_9232.JPEG">
         </div>
+    </div>
+    <div class="food">
+        <div class="food-top">
+            Take Pictures In Front Of A Tokyo Landmark; A Vending Machine
+        </div>
+        <div class="food-middle">
+            Take 50, 100 of them. #streetphotography
+        </div>
+        <div class="food-middle">
+            And get a drink. You need it.
+        </div>
+        <div class="food-bottom">
+            <div class="image-block">
+                <img src="../images/IMG_0747.JPG">
+                <div class="pic-subtext"></div>
+            </div>
+            <div class="image-block">
+                <img src="../images/IMG_0782.JPG">
+                <div class="pic-subtext"></div>
+            </div>
+            <div class="image-block">
+                <img src="../images/IMG_0772.JPG">
+                <div class="pic-subtext"></div>
+            </div>
+            <div class="image-block">
+                <img src="../images/IMG_0786.JPG">
+                <div class="pic-subtext"></div>
+            </div>
+        </div>
+    </div>
+    <div class="content-1">
+        <div class="content-text">
+            <div class="content1-main">Watch The Fireworks</div>
+            <div class="content1-sub">A little bit of summer's what the whole year's all about.</div>
+        </div>
+        <div class="firework-pic">
+            <img src="../images/DSC_0906.JPEG">
+        </div>
+    </div>
+    <div class="fireworks">
+        <img src="../images/DSC_0869.JPEG">
+        <img src="../images/DSC_0872.JPEG">
+        <img src="../images/DSC_0873.JPEG">
+        <img src="../images/DSC_0875.JPEG">
     </div>
     <div class="info">
         <div class="info-top">
@@ -93,20 +154,20 @@
         </div>
         <div class="info-bottom">
             <div class="image-block">
-                <div class="numbers">1027</div>
-                <div class="pic-subtext">kilometers traveled</div>
+                <div class="numbers">16.59</div>
+                <div class="pic-subtext">kilometers walked.</div>
             </div>
             <div class="image-block">
-                <div class="numbers">12</div>
-                <div class="pic-subtext">bottles of water bought</div>
+                <div class="numbers">0</div>
+                <div class="pic-subtext">JPY spent in Ginza.</div>
             </div>
             <div class="image-block">
-                <div class="numbers">343</div>
-                <div class="pic-subtext">photo shots</div>
+                <div class="numbers">1.34</div>
+                <div class="pic-subtext">hours spent waiting to be seated for dinner.</div>
             </div>
             <div class="image-block">
-                <div class="numbers">13246</div>
-                <div class="pic-subtext">steps taken</div>
+                <div class="numbers">2</div>
+                <div class="pic-subtext">people satisfied with the fireworks. maybe more.</div>
             </div>
         </div>
     </div>
