Update content for day 3

--- a/pages/day3.html
+++ b/pages/day3.html
@@ -28,13 +28,13 @@
                 <img src="../images/IMG_0961.JPG">
         </div>
         <div class="day2-text">
-            <div class="content1-main">Culture</div>
+            <div class="content1-main">1. Culture</div>
             <div class="content1-sub">Include a cultural element in your date to show that you're intellectual and cultured — someone who values local traditions and admires unique architecture.</div>
         </div>
     </div>
     <div class="food">
         <div class="food-top">
-            Local Delicacies
+            2. Local Delicacies
         </div>
         <div class="food-middle">
             Show her that you have great taste by treating her to the best melon pan in the world, a grilled unagi onigiri for something a bit unconventional, and takoyaki for a classic favorite. Finish with fresh peaches and Shine Muscat grapes for a healthy and delightful dessert. Share each dish to create a more intimate and memorable experience.
@@ -58,50 +58,50 @@
             </div>
         </div>
     </div>
-    <div class="quotation">
-        <div class="quotes">
-            If I had to eat only in one city for the rest of my life, Tokyo would be it.
+    <div class="content-1">
+        <div class="content-text">
+            <div class="content1-main">3. Roadtrip</div>
+            <div class="content1-sub">Take a drive together and enjoy the intimacy of sharing a small, private space. You can talk, sing karaoke, snack on treats during traffic stops, and soak in the ever-changing scenery. Maybe you'll see a very bright, very big moon along the way. A road trip isn't just about the destination—it's about the journey you share along the way.</div>
         </div>
-        <div class="speaker">
-            -Anthony Bourdain
+        <div class="kamakura-spots">
+            <img src="../images/IMG_9240.JPEG">
+            <img src="../images/IMG_9247.JPEG">
         </div>
     </div>
     <div class="food">
         <div class="food-top">
-            Eat MORE Foods
+            4. Picnic
         </div>
         <div class="food-middle">
-            We really ate a lot.
+            Head outdoors and breathe in the fresh mountain air. Savor freshly picked local fruits and take in the stunning scenery. Even if the bakery you planned to visit is closed, you'll still create unforgettable memories.
         </div>
         <div class="food-bottom">
             <div class="image-block">
-                <img src="../images/IMG_9049.JPEG">
-                <div class="pic-subtext">From fried stuffs</div>
+                <img src="../images/IMG_0999.JPEG">
+                <div class="pic-subtext"></div>
             </div>
             <div class="image-block">
-                <img src="../images/IMG_0871.JPG">
-                <div class="pic-subtext">to raw seafoods</div>
+                <img src="../images/IMG_1024.JPG">
+                <div class="pic-subtext"></div>
             </div>
             <div class="image-block">
-                <img src="../images/IMG_0896.JPG">
-                <div class="pic-subtext">to cool jelly</div>
+                <img src="../images/IMG_1041.JPG">
+                <div class="pic-subtext"></div>
             </div>
             <div class="image-block">
-                <img src="../images/IMG_0909.JPG">
-                <div class="pic-subtext">to hot curry, which was too hot.</div>
+                <img src="../images/IMG_1025.JPG">
+                <div class="pic-subtext"></div>
             </div>
         </div>
     </div>
     <div class="content-1">
         <div class="content-text">
-            <div class="content1-main">Take Selfies</div>
-            <div class="content1-sub">Preferably in a mirror or a mirrory surface.</div>
+            <div class="content1-main">5. Cook</div>
+            <div class="content1-sub">Instead of going to a restaurant where everything is served to you, take your date to a barbecue joint where you can show your care through an act of service. Grill something special for them while they step away to freshen up, or struggling with a bathroom problem. They'll appreciate the thoughtfulness and effort.</div>
         </div>
         <div class="kamakura-spots">
-            <img src="../images/IMG_0824.JPG">
-            <img src="../images/IMG_9023.JPEG">
-            <img src="../images/DSC_0926.JPEG">
-            <img src="../images/IMG_9232.JPEG">
+            <img src="../images/IMG_1054.JPG">
+            <img src="../images/IMG_1047.JPG">
         </div>
     </div>
     <div class="food">
