Write content for day 3

--- a/pages/day3.html
+++ b/pages/day3.html
@@ -96,8 +96,8 @@
     </div>
     <div class="content-1">
         <div class="content-text">
-            <div class="content1-main">5. Cook</div>
-            <div class="content1-sub">Instead of going to a restaurant where everything is served to you, take your date to a barbecue joint where you can show your care through an act of service. Grill something special for them while they step away to freshen up, or struggling with a bathroom problem. They'll appreciate the thoughtfulness and effort.</div>
+            <div class="content1-main">5. Cooking Session</div>
+            <div class="content1-sub">Instead of going to a restaurant where everything is served to you, take your date to a barbecue joint where you can show your care through an act of service. Grill something special for them while they step away to freshen up, or struggling with a toilet problem. They'll appreciate the thoughtfulness and effort.</div>
         </div>
         <div class="kamakura-spots">
             <img src="../images/IMG_1054.JPG">
@@ -106,47 +106,52 @@
     </div>
     <div class="food">
         <div class="food-top">
-            Take Pictures In Front Of A Tokyo Landmark; A Vending Machine
+            6. Night Stroll
         </div>
         <div class="food-middle">
-            Take 50, 100 of them. #streetphotography
-        </div>
-        <div class="food-middle">
-            And get a drink. You need it.
+            Take a leisurely walk after dinner to stretch your legs and enjoy the vibrant glow of the city lights. You might even pick up a few souvenirs to remember the night.
         </div>
         <div class="food-bottom">
             <div class="image-block">
-                <img src="../images/IMG_0747.JPG">
+                <img src="../images/DSC_0935.JPEG">
                 <div class="pic-subtext"></div>
             </div>
             <div class="image-block">
-                <img src="../images/IMG_0782.JPG">
+                <img src="../images/DSC_0926.JPEG">
                 <div class="pic-subtext"></div>
             </div>
             <div class="image-block">
-                <img src="../images/IMG_0772.JPG">
+                <img src="../images/DSC_0920.JPEG">
                 <div class="pic-subtext"></div>
             </div>
             <div class="image-block">
-                <img src="../images/IMG_0786.JPG">
+                <img src="../images/DSC_0927.JPEG">
+                <div class="pic-subtext"></div>
+            </div>
+            <div class="image-block">
+                <img src="../images/DSC_0919.JPEG">
                 <div class="pic-subtext"></div>
             </div>
         </div>
     </div>
     <div class="content-1">
         <div class="content-text">
-            <div class="content1-main">Watch The Fireworks</div>
-            <div class="content1-sub">A little bit of summer's what the whole year's all about.</div>
+            <div class="content1-main">7. Godzilla</div>
+            <div class="content1-sub">It couldn't be more romantic than this.</div>
         </div>
         <div class="firework-pic">
-            <img src="../images/DSC_0906.JPEG">
+            <img src="../images/IMG_1095.JPG">
         </div>
     </div>
-    <div class="fireworks">
-        <img src="../images/DSC_0869.JPEG">
-        <img src="../images/DSC_0872.JPEG">
-        <img src="../images/DSC_0873.JPEG">
-        <img src="../images/DSC_0875.JPEG">
+    <div class="godzilla">
+        <img src="../images/IMG_1096.JPG">
+        <img src="../images/IMG_1098.JPG">
+        <img src="../images/IMG_1101.JPG">
+    </div>
+    <div class="quotation">
+        <div class="content2-main">Last But Not Least</div>
+        <div class="content2-sub">Show them your love by being attentive and fully present. Treat them with respect and kindness, making them feel truly cared for and appreciated. Surprise them with thoughtful gestures—perhaps even create a website to reminisce about your date and the memories you've shared. That'll be great.
+        </div>
     </div>
     <div class="info">
         <div class="info-top">
@@ -154,20 +159,20 @@
         </div>
         <div class="info-bottom">
             <div class="image-block">
-                <div class="numbers">16.59</div>
-                <div class="pic-subtext">kilometers walked.</div>
+                <div class="numbers">16</div>
+                <div class="pic-subtext">hours of perfect date</div>
+            </div>
+            <div class="image-block">
+                <div class="numbers">1</div>
+                <div class="pic-subtext">omikuji fortune drawn</div>
+            </div>
+            <div class="image-block">
+                <div class="numbers">1</div>
+                <div class="pic-subtext">broken bidet</div>
             </div>
             <div class="image-block">
                 <div class="numbers">0</div>
-                <div class="pic-subtext">JPY spent in Ginza.</div>
-            </div>
-            <div class="image-block">
-                <div class="numbers">1.34</div>
-                <div class="pic-subtext">hours spent waiting to be seated for dinner.</div>
-            </div>
-            <div class="image-block">
-                <div class="numbers">2</div>
-                <div class="pic-subtext">people satisfied with the fireworks. maybe more.</div>
+                <div class="pic-subtext">regrets</div>
             </div>
         </div>
     </div>
