Add content for day 4

--- a/pages/day4.html
+++ b/pages/day4.html
@@ -4,109 +4,125 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles.css">
-    <title>Japan Day 1</title>
+    <title>Japan Day 4</title>
 </head>
 <body>
     <div class="header">
         <div class="header-top">
-            <div class="logo">Day 1, 20240823</div>
+            <div class="logo">Day 4 - 20240826</div>
             <ul class="header-links">
                 <li><a href="../index.html" target="_blank">home</a></li>
             </ul>
         </div>
     </div>
-    <img class="header-img" src="../images/DSC_0797.JPEG">
+    <img class="header-img-day-4" src="../images/IMG_9572.JPEG">
     <div class="content-title">
-        <div class="content1-main">Lost in Japan</div>
-        <div class="content1-sub">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
+        <div class="content1-main">Bittersweet Goodbye</div>
+        <div class="content1-sub">Goodbyes are always hard, especially when it's with someone you love deeply—or with a city as vibrant as Tokyo. All we can do is cherish the moments we share together and maximize the half-day that we have left to try soften the pain by doing things like...</div>
     </div>
-    <div class="info">
-        <div class="info-top">
-            Places we visited.
+    <div class="border"></div>
+    <div class="day1-top">
+        <!-- <div class="image-placeholder"> -->
+        <div class="train-pic">
+                <img src="../images/IMG_1107.JPEG">
+                <img src="../images/IMG_1111.JPEG">
         </div>
-        <div class="info-bottom">
+        <div class="day2-text">
+            <div class="content1-main">Take More Pictures</div>
+            <div class="content1-sub">Even if you're just strolling through a neighborhood on your way to the parking spot.</div>
+        </div>
+    </div>
+    <div class="food">
+        <div class="food-top">
+            Eat The Best Gyukatsu In Tokyo
+        </div>
+        <div class="food-middle">
+            While slightly panicking over your parking spot because you're only allowed to park for an hour, actually. And you need to move your car before the hour is up, but you haven't finished the meal, but you're afraid you're going to get a parking ticket, and then the hour is up anyway, and you haven't moved your car, so you stop panicking because what's done is done, and you get some currently-viral-on-TikTok-doughnuts instead, and then when you get back to your car, you found out that you're supposed to pay the meter when you parked and not when you left and now you can't pay for parking so you just drive away and actually still feel guilty about it to this day.
+        </div>
+        <div class="food-bottom">
             <div class="image-block">
-                <img src="../images/DSC_0797.JPEG">
-                <div class="pic-subtext">The sun was scorching, but still not as hot as you.</div>
+                <img src="../images/IMG_1112.JPG">
+                <div class="pic-subtext"></div>
             </div>
             <div class="image-block">
-                <img src="../images/DSC_0919.JPEG">
-                <div class="pic-subtext">The lights were bright, but you shone the brightest!</div>
+                <img src="../images/IMG_1122.JPEG">
+                <div class="pic-subtext"></div>
             </div>
             <div class="image-block">
-                <img src="../images/IMG_0839.JPG">
-                <div class="pic-subtext">Classic and sophisticated. But I'm not talking about Ginza.</div>
+                <img src="../images/IMG_1127.JPG">
+                <div class="pic-subtext"></div>
             </div>
             <div class="image-block">
-                <img src="../images/IMG_0999.JPEG">
-                <div class="pic-subtext">Are you a sunflower? Because you brighten my day and always turn me in your direction.</div>
+                <img src="../images/IMG_1128.JPEG">
+                <div class="pic-subtext"></div>
             </div>
         </div>
     </div>
     <div class="content-1">
-        <div class="image-placeholder">
-            <img src="../images/IMG_0961.JPG">
-        </div>
         <div class="content-text">
-            <div class="content1-main">Lost in Japan</div>
-            <div class="content1-sub">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
+            <div class="content1-main">Retail Therapy</div>
+            <div class="content1-sub">to cheer you up.</div>
+        </div>
+        <div class="roppongi-bottom">
+            <div class="roppongi-image-block">
+                <img src="../images/IMG_9561.JPEG">
+                <div class="pic-subtext">This cheered me up.</div>
+            </div>
+            <div class="roppongi-image-block">
+                <img src="../images/IMG_1181.JPG">
+                <div class="pic-subtext">This did not.</div>
+            </div>
         </div>
     </div>
-    <div class="content-2">
-        <div class="content-text">
-            <div class="content2-main">Lost in Japan</div>
-            <div class="content2-sub">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
+    <div class="food">
+        <div class="food-top">
+            Take Even More Pictures
         </div>
-        <div class="image-placeholder">
-            <img src="../images/IMG_0961.JPG">
-        </div>
-    </div>
-    <div class="content-1">
-        <div class="content-text">
-            <div class="content1-main">Lost in Japan</div>
-            <div class="content1-sub">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
-        </div>
-        <div class="image-placeholder">
-            <img src="../images/IMG_0961.JPG">
-        </div>
-    </div>
-    <div class="quotation">
-        <div class="quotes">
-            You said that money can't buy happiness? He he he he. Sumimasen, come to Japan! I wonder if you know how they live in Tokyo. If you seen it then you mean it. Then you know you have to go, fast and furious!
-        </div>
-        <div class="speaker">
-            -Guy on TikTok
+        <div class="food-bottom">
+            <div class="image-block">
+                <img src="../images/IMG_1135.JPG">
+                <div class="pic-subtext"></div>
+            </div>
+            <div class="image-block">
+                <img src="../images/IMG_1140.JPG">
+                <div class="pic-subtext"></div>
+            </div>
+            <div class="image-block">
+                <img src="../images/IMG_1141.JPG">
+                <div class="pic-subtext"></div>
+            </div>
+            <div class="image-block">
+                <img src="../images/IMG_1143.JPG">
+                <div class="pic-subtext"></div>
+            </div>
         </div>
     </div>
-    <div class="content-1">
-        <div class="content-text">
-            <div class="content1-main">Lost in Japan</div>
-            <div class="content1-sub">Remember when you visited Japan? I certainly do! I've created this page to highlight some of our cherished memories and moments from that trip. It's like a digital scrapbook, filled only with our best pictures—don't worry, I made sure to pick the good ones, he he he!</div>
-        </div>
-        <div class="image-placeholder">
-            <img src="../images/IMG_0961.JPG">
-        </div>
-    </div>
+    <div class="content-3">
+        <!-- <div class="content-text"> -->
+        <div class="content3-main">And Maybe... Plan Another Japan Trip?</div>
+        <div class="content1-sub">Maybe for January the next year?</div>
+        <!-- </div> -->
+   </div>
     <div class="info">
         <div class="info-top">
             Stats
         </div>
         <div class="info-bottom">
             <div class="image-block">
-                <div class="numbers">1027</div>
-                <div class="pic-subtext">kilometers traveled</div>
+                <div class="numbers">156</div>
+                <div class="pic-subtext">days until we meet again</div>
             </div>
             <div class="image-block">
-                <div class="numbers">12</div>
-                <div class="pic-subtext">bottles of water bought</div>
+                <div class="numbers">1</div>
+                <div class="pic-subtext">fugitive from the law</div>
             </div>
             <div class="image-block">
-                <div class="numbers">343</div>
-                <div class="pic-subtext">photo shots</div>
+                <div class="numbers">1</div>
+                <div class="pic-subtext">man missing you so much</div>
             </div>
             <div class="image-block">
-                <div class="numbers">13246</div>
-                <div class="pic-subtext">steps taken</div>
+                <div class="numbers">457</div>
+                <div class="pic-subtext">kilometers of lonely drive back home</div>
             </div>
         </div>
     </div>
